Updated header text

--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,7 @@
             </a>
             <div class="menu menu-desktop" id="menu">
                 <ul>
-                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">HOME PAGE</a></li>
                     <li><a href="#">Car News</a></li>
                     <li><a href="#">Deals</a></li>
                     <li><a href="#">Review</a></li>
