updated computer2 text

--- a/html/index.html
+++ b/html/index.html
@@ -37,7 +37,7 @@
                 <ul>
                     <li><a href="#">HOME PAGE</a></li>
                     <li><a href="#">Car News Computer 1</a></li>
-                    <li><a href="#">Deals</a></li>
+                    <li><a href="#">Deals Computer2</a></li>
                     <li><a href="#">Review</a></li>
                     <li class="have-sub-menu">
                         <a href="#">More</a>
