changed index.html on branch computer1

--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,7 @@
             </a>
             <div class="menu menu-desktop" id="menu">
                 <ul>
-                    <li><a href="#">HOME PAGE</a></li>
+                    <li><a href="#">HOME PAGE Branch 1</a></li>
                     <li><a href="#">Car News Computer 1</a></li>
                     <li><a href="#">Deals Computer2</a></li>
                     <li><a href="#">Review</a></li>
